src/components/interactive-task/_interactive-task.scss
.c-interactive-task {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    > * {
        position: relative;
        z-index: 2;
    }

    &__info,
    &__main {
        @include mq($from: tablet) {
            float: left;
            width: 50%;
        }
    }

    &__info {
        position: relative;
        z-index: 3;
        margin-top: 20px;

        @include mq($from: tablet) {
            margin-top: 60px;
            padding-right: 60px;
        }
    }

    &__progress {
        @include fs-textSans(1);
        margin: 0;

        @include mq($from: tablet) {
            @include fs-textSans(3);
        }
    }

    &__title {
        @include fs-headline(4);
        margin-top: 0;
        margin-bottom: 16px;
        font-weight: 200;

        @include mq($from: tablet) {
            @include fs-headline(6);
            margin-bottom: 60px;
        }
    }

    &__description {
        @include fs-header(1);

        @include mq($from: tablet) {
            @include fs-header(4);
        }
    }

    &__next-button {
        @include fs-textSans(5);
        position: relative;
        padding-left: 78px;
        height: 62px;
        line-height: 62px;
        color: colour(white);
        font-weight: bold;
    }

    &__next-button-circle {
        position: absolute;
        left: 0;
        color: colour(white);
        border-color: colour(white);
    }

    &__main {
        @include mq($until: tablet) {
            background: transparentize(colour(black), 0.8);
        }
    }

    &__place-setting {
        position: relative;
        height: 200px;
        z-index: 1;

        @include mq($from: tablet) {
            padding: 40px 0;
            height: auto;
        }

        > svg {
            display: block;

            @include mq($until: tablet) {
                position: absolute;
                top: 50%;
                left: 50%;
                z-index: 1;
                min-width: 100%;
                min-height: 100%;
                width: auto;
                height: auto;
                transform: translateX(-50%) translateY(-50%);
            }
        }
    }

    &__options {
        position: relative;
        z-index: 2;
        margin: 0;
        padding: 0;
        list-style: none;
    }

    &__option-button {
        @include fs-headline(2);
        overflow: hidden;
        width: 100%;
        height: 46px;
        color: transparentize(colour(white), 0.4);
        line-height: 44px;
        text-align: left;
        white-space: nowrap;
        text-overflow: ellipsis;
        border-top: 1px solid transparentize(colour(white), 0.4);
        cursor: auto;

        @include mq($from: tablet) {
            @include fs-headline(3);
        }

        &.is-selected {
            color: colour(white);
        }

        &.is-active {
            cursor: pointer;

            &:hover {
                padding-left: 10px;
                color: colour(white);
                background: transparentize(colour(black), 0.8);
            }
        }
    }

    &__patron {
        display: none;
        position: absolute;
        bottom: 0;
        left: 0;
        z-index: 1;
        width: 100%;
        opacity: 0.8;

        @include mq($from: tablet) {
            display: block;
            width: 50%;
        }

        > svg {
            @extend .l-fill-width;
        }
    }
}

